--- a/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
+++ b/src/app/components/cursos/asignar-examenes/asignar-examenes.component.html
@@ -13,30 +13,58 @@
         <mat-card-title>Exámenes del curso {{ curso.nombre }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="examenesAsignar" class="mat-elevation-z8 my-3 w-100">
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
-            </ng-container>
+        <mat-tab-group dynamicHeight [(selectedIndex)]="tabIndex">
+            <mat-tab label="Asignar exámenes">
+                <table mat-table [dataSource]="examenesAsignar" class="mat-elevation-z8 my-3 w-100">
+                    <ng-container matColumnDef="nombre">
+                        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                        <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
+                    </ng-container>
 
-            <ng-container matColumnDef="asignatura">
-                <th mat-header-cell *matHeaderCellDef>Asignatura</th>
-                <td mat-cell *matCellDef="let examen"> {{examen.asignaturaHija.nombre}} </td>
-            </ng-container>
+                    <ng-container matColumnDef="asignatura">
+                        <th mat-header-cell *matHeaderCellDef>Asignatura</th>
+                        <td mat-cell *matCellDef="let examen"> {{examen.asignaturaHija.nombre}} </td>
+                    </ng-container>
 
-            <ng-container matColumnDef="eliminar">
-                <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-                <td mat-cell *matCellDef="let examen">
-                    <button type="button" mat-mini-fab color="warn" (click)="eliminarDelAsignar(examen)">X</button>
-                </td>
-            </ng-container>
+                    <ng-container matColumnDef="eliminar">
+                        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+                        <td mat-cell *matCellDef="let examen">
+                            <button type="button" mat-mini-fab color="warn"
+                                (click)="eliminarDelAsignar(examen)">X</button>
+                        </td>
+                    </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
-            <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
-        </table>
-        <button type="button" [disabled]="examenesAsignar.length === 0" (click)="asignar()" mat-raised-button
-            color="primary" class="m-4">
-            Asignar
-        </button>
+                    <tr mat-header-row *matHeaderRowDef="mostrarColumnas"></tr>
+                    <tr mat-row *matRowDef="let row; columns: mostrarColumnas;"></tr>
+                </table>
+                <button type="button" [disabled]="examenesAsignar.length === 0" (click)="asignar()" mat-raised-button
+                    color="primary" class="m-4">
+                    Asignar
+                </button>
+            </mat-tab>
+            <mat-tab label="Exámenes del curso">
+                <table mat-table [dataSource]="examenes" class="mat-elevation-z8 my-3 w-100">
+                    <ng-container matColumnDef="id">
+                        <th mat-header-cell *matHeaderCellDef>Id</th>
+                        <td mat-cell *matCellDef="let examen"> {{examen.id}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="nombre">
+                        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                        <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="asignaturas">
+                        <th mat-header-cell *matHeaderCellDef>Asignaturas</th>
+                        <td mat-cell *matCellDef="let examen">
+                            {{examen.asignaturaPadre.nombre}} -> {{examen.asignaturaHija.nombre}}
+                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="mostrarTodasColumnasExamenes"></tr>
+                    <tr mat-row *matRowDef="let row; columns: mostrarTodasColumnasExamenes;"></tr>
+                </table>
+            </mat-tab>
+        </mat-tab-group>
     </mat-card-content>
 </mat-card>
