--- a/src/app/components/alumnos/list/alumnos.component.html
+++ b/src/app/components/alumnos/list/alumnos.component.html
@@ -14,6 +14,7 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Creado en</th>
+                    <th>Exámenes</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
                 </tr>
@@ -28,6 +29,12 @@
                     <td>{{ alumno.apellido }}</td>
                     <td>{{ alumno.email }}</td>
                     <td>{{ alumno.createAt | date:'dd/MM/yyyy' }}</td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm"
+                            [routerLink]="['/alumnos', 'responder-examen', alumno.id]">
+                            Responder
+                        </button>
+                    </td>
                     <td>
                         <button type="button" [routerLink]="['/alumnos', 'form', alumno.id]"
                             class="btn btn-sm btn-warning">
