--- a/src/app/components/alumnos/responder-examen/responder-examen.component.html
+++ b/src/app/components/alumnos/responder-examen/responder-examen.component.html
@@ -1,1 +1,26 @@
-<p>responder-examen works!</p>
+<table mat-table [dataSource]="examenes" class="mat-elevation-z8 my-3 w-100">
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let examen"> {{examen.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="asignaturas">
+        <th mat-header-cell *matHeaderCellDef>Asignaturas</th>
+        <td mat-cell *matCellDef="let examen">
+            {{examen.asignaturaPadre.nombre}} -> {{examen.asignaturaHija.nombre}}
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="preguntas">
+        <th mat-header-cell *matHeaderCellDef>Preguntas</th>
+        <td mat-cell *matCellDef="let examen">{{ examen.preguntas.length }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="mostrarColumnasExamenes"></tr>
+    <tr mat-row *matRowDef="let row; columns: mostrarColumnasExamenes;"></tr>
+</table>
