--- a/src/app/components/alumnos/responder-examen/responder-examen.component.html
+++ b/src/app/components/alumnos/responder-examen/responder-examen.component.html
@@ -1,26 +1,35 @@
-<table mat-table [dataSource]="examenes" class="mat-elevation-z8 my-3 w-100">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let examen"> {{examen.id}} </td>
-    </ng-container>
+<mat-card class="w-100">
+    <mat-card-header *ngIf="curso">
+        <mat-card-title>Exámenes del curso {{ curso.nombre }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <table mat-table [dataSource]="datasource" class="mat-elevation-z8 my-3 w-100">
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>Id</th>
+                <td mat-cell *matCellDef="let examen"> {{examen.id}} </td>
+            </ng-container>
 
-    <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
-    </ng-container>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let examen"> {{examen.nombre}} </td>
+            </ng-container>
 
-    <ng-container matColumnDef="asignaturas">
-        <th mat-header-cell *matHeaderCellDef>Asignaturas</th>
-        <td mat-cell *matCellDef="let examen">
-            {{examen.asignaturaPadre.nombre}} -> {{examen.asignaturaHija.nombre}}
-        </td>
-    </ng-container>
+            <ng-container matColumnDef="asignaturas">
+                <th mat-header-cell *matHeaderCellDef>Asignaturas</th>
+                <td mat-cell *matCellDef="let examen">
+                    {{examen.asignaturaPadre.nombre}} -> {{examen.asignaturaHija.nombre}}
+                </td>
+            </ng-container>
 
-    <ng-container matColumnDef="preguntas">
-        <th mat-header-cell *matHeaderCellDef>Preguntas</th>
-        <td mat-cell *matCellDef="let examen">{{ examen.preguntas.length }}</td>
-    </ng-container>
+            <ng-container matColumnDef="preguntas">
+                <th mat-header-cell *matHeaderCellDef>Preguntas</th>
+                <td mat-cell *matCellDef="let examen">{{ examen.preguntas.length }}</td>
+            </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="mostrarColumnasExamenes"></tr>
-    <tr mat-row *matRowDef="let row; columns: mostrarColumnasExamenes;"></tr>
-</table>
+            <tr mat-header-row *matHeaderRowDef="mostrarColumnasExamenes"></tr>
+            <tr mat-row *matRowDef="let row; columns: mostrarColumnasExamenes;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons class="d-flex justify-content-start">
+        </mat-paginator>
+    </mat-card-content>
+</mat-card>
