--- a/src/app/components/alumnos/responder-examen/responder-examen.component.html
+++ b/src/app/components/alumnos/responder-examen/responder-examen.component.html
@@ -26,6 +26,24 @@
                 <td mat-cell *matCellDef="let examen">{{ examen.preguntas.length }}</td>
             </ng-container>
 
+            <ng-container matColumnDef="responder">
+                <th mat-header-cell *matHeaderCellDef>Responder</th>
+                <td mat-cell *matCellDef="let examen">
+                    <button type="button" mat-stroked-button color="warn" [disabled]="examen.respondido">
+                        {{ examen.respondido ? 'Respondido': 'Responder' }}
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="ver">
+                <th mat-header-cell *matHeaderCellDef>Ver</th>
+                <td mat-cell *matCellDef="let examen">
+                    <button type="button" mat-stroked-button color="primary" [disabled]="!examen.respondido">
+                        Ver
+                    </button>
+                </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="mostrarColumnasExamenes"></tr>
             <tr mat-row *matRowDef="let row; columns: mostrarColumnasExamenes;"></tr>
         </table>
