--- a/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
+++ b/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
@@ -1,6 +1,21 @@
 <h1 mat-dialog-title>Curso {{ curso.nombre }}</h1>
 <div mat-dialog-content>
     <p>Examen {{ examen.nombre }}</p>
+
+    <mat-accordion>
+        <mat-expansion-panel *ngFor="let pregunta of examen.preguntas">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{ pregunta.texto }}
+                </mat-panel-title>
+                <mat-panel-description></mat-panel-description>
+            </mat-expansion-panel-header>
+            <mat-form-field class="w-100">
+                <textarea matInput placeholder="Deja tu respuesta"></textarea>
+            </mat-form-field>
+        </mat-expansion-panel>
+    </mat-accordion>
+
 </div>
 <div mat-dialog-actions>
     <button type="button" mat-button (click)="cancelar()">Cancelar</button>
