--- a/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
+++ b/src/app/components/alumnos/responder-examen-modal/responder-examen-modal.component.html
@@ -11,7 +11,7 @@
                 <mat-panel-description></mat-panel-description>
             </mat-expansion-panel-header>
             <mat-form-field class="w-100">
-                <textarea matInput placeholder="Deja tu respuesta"></textarea>
+                <textarea matInput (change)="responder(pregunta, $event)" placeholder="Deja tu respuesta"></textarea>
             </mat-form-field>
         </mat-expansion-panel>
     </mat-accordion>
