--- a/src/app/components/alumnos/responder-examen/responder-examen.component.html
+++ b/src/app/components/alumnos/responder-examen/responder-examen.component.html
@@ -39,7 +39,7 @@
             <ng-container matColumnDef="ver">
                 <th mat-header-cell *matHeaderCellDef>Ver</th>
                 <td mat-cell *matCellDef="let examen">
-                    <button type="button" mat-stroked-button color="primary" [disabled]="!examen.respondido">
+                    <button type="button" mat-stroked-button color="primary" (click)="verExamen(examen)" [disabled]="!examen.respondido">
                         Ver
                     </button>
                 </td>
