--- a/src/app/components/alumnos/ver-examen-modal/ver-examen-modal.component.html
+++ b/src/app/components/alumnos/ver-examen-modal/ver-examen-modal.component.html
@@ -1,1 +1,20 @@
-<p>ver-examen-modal works!</p>
+<h1 mat-dialog-title>Curso {{ curso.nombre }}</h1>
+<div mat-dialog-content>
+    <p>Examen {{ examen.nombre }}</p>
+
+    <mat-accordion>
+        <mat-expansion-panel *ngFor="let  respuesta of respuestas">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{ respuesta.pregunta.texto }}
+                </mat-panel-title>
+                <mat-panel-description></mat-panel-description>
+            </mat-expansion-panel-header>
+            <p>{{ respuesta.texto }}</p>
+        </mat-expansion-panel>
+    </mat-accordion>
+
+</div>
+<div mat-dialog-actions>
+    <button type="button" mat-button (click)="cerrar()">Cancelar</button>
+</div>
